[package]
name = "k8s-monitor"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
thiserror = "1.0.21"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }

kube-runtime = "0.43"
kube = { version = "0.43", features = ["derive"] }
k8s-openapi = { version = "0.9", features = ["api", "v1_17"] }

serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
